--- a/src/Shared/Resources/xlf/Strings.shared.ko.xlf
+++ b/src/Shared/Resources/xlf/Strings.shared.ko.xlf
@@ -32,26 +32,6 @@
         <target state="translated">{0}({1},{2})</target>
         <note>A file location to be embedded in a string.</note>
       </trans-unit>
-      <trans-unit id="FilterContainsProjectNotInSolution">
-        <source>MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</source>
-        <target state="new">MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</target>
-        <note>{StrBegin="MSB: 5028"}UE: The project filename is provided separately to loggers.</note>
-      </trans-unit>
-      <trans-unit id="FilteredProjectDoesNotExist">
-        <source>MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</source>
-        <target state="new">MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</target>
-        <note>{StrBegin="MSB: 5027"}UE: The project filename is provided separately to loggers.</note>
-      </trans-unit>
-      <trans-unit id="JsonParsingError">
-        <source>MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</source>
-        <target state="new">MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</target>
-        <note>{StrBegin="MSB: 5025"}UE: The solution filename is provided separately to loggers.</note>
-      </trans-unit>
-      <trans-unit id="MissingSolutionError">
-        <source>MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</source>
-        <target state="new">MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</target>
-        <note>{StrBegin="MSB: 5026"}UE: The solution filename is provided separately to loggers.</note>
-      </trans-unit>
       <trans-unit id="ModifyingTaskHostEnvironmentHeader">
         <source>Making the following modifications to the environment received from the parent node before applying it to the task host:</source>
         <target state="translated">작업 호스트에 적용하기 전에 부모 노드로부터 받은 환경을 다음과 같이 수정하고 있습니다.</target>
@@ -84,6 +64,26 @@
         <source>Path: {0} exceeds the OS max path limit. The fully qualified file name must be less than {1} characters.</source>
         <target state="translated">경로: {0}은(는) OS 최대 경로 제한을 초과합니다. 정규화된 파일 이름은 {1}자 이하여야 합니다.</target>
         <note />
+      </trans-unit>
+      <trans-unit id="Shared.SolutionFilterFilterContainsProjectNotInSolution">
+        <source>MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</source>
+        <target state="new">MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</target>
+        <note>{StrBegin="MSB5028: "}UE: The project filename is provided separately to loggers.</note>
+      </trans-unit>
+      <trans-unit id="Shared.SolutionFilterFilteredProjectDoesNotExist">
+        <source>MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</source>
+        <target state="new">MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</target>
+        <note>{StrBegin="MSB5027: "}UE: The project filename is provided separately to loggers.</note>
+      </trans-unit>
+      <trans-unit id="Shared.SolutionFilterJsonParsingError">
+        <source>MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</source>
+        <target state="new">MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</target>
+        <note>{StrBegin="MSB5025: "}UE: The solution filename is provided separately to loggers.</note>
+      </trans-unit>
+      <trans-unit id="Shared.SolutionFilterMissingSolutionError">
+        <source>MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</source>
+        <target state="new">MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</target>
+        <note>{StrBegin="MSB5026: "}UE: The solution filename is provided separately to loggers.</note>
       </trans-unit>
       <trans-unit id="UnrecognizedToolsVersion">
         <source>MSB4132: The tools version "{0}" is unrecognized. Available tools versions are {1}.</source>
