--- a/src/MSBuild/Resources/Strings.resx
+++ b/src/MSBuild/Resources/Strings.resx
@@ -1154,6 +1154,10 @@ Copyright (C) Microsoft Corporation. All rights reserved.
     <value>MSBUILD : error MSB1047: File to preprocess to is not valid. {0}</value>
     <comment>{StrBegin="MSBUILD : error MSB1047: "}</comment>
   </data>
+  <data name="InvalidTargetsPath">
+    <value>MSBUILD : error MSB1047: File to print targets to is not valid. {0}</value>
+    <comment>{StrBegin="MSBUILD : error MSB1047: "}</comment>
+  </data>
   <!-- MSB1021 and MSB1020 are also used in the engine but their copies do not have the "MSBUILD : " prefix so we must have our own -->
   <data name="LoggerCreationError" UESanitized="true" Visibility="Public">
     <value>MSBUILD : error MSB1021: Cannot create an instance of the logger. {0}</value>
