update autogenerated localization files

--- a/src/MSBuild/Resources/xlf/Strings.es.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.es.xlf
@@ -1011,6 +1011,11 @@ Copyright (C) Microsoft Corporation. Todos los derechos reservados.
       LOCALIZATION: {0} contains the invalid switch text.
     </note>
       </trans-unit>
+      <trans-unit id="InvalidTargetsPath">
+        <source>MSBUILD : error MSB1047: File to print targets to is not valid. {0}</source>
+        <target state="new">MSBUILD : error MSB1047: File to print targets to is not valid. {0}</target>
+        <note>{StrBegin="MSBUILD : error MSB1047: "}</note>
+      </trans-unit>
       <trans-unit id="InvalidToolsVersionError">
         <source>MSBUILD : error MSB1040: ToolsVersion is not valid. {0}</source>
         <target state="translated">MSBUILD : error MSB1040: El valor de ToolsVersion no es válido. {0}</target>
