--- a/src/MSBuild/Resources/xlf/Strings.de.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.de.xlf
@@ -1002,6 +1002,11 @@ Copyright (C) Microsoft Corporation. Alle Rechte vorbehalten.
       LOCALIZATION: {0} contains the invalid switch text.
     </note>
       </trans-unit>
+      <trans-unit id="InvalidTargetsPath">
+        <source>MSBUILD : error MSB1047: File to print targets to is not valid. {0}</source>
+        <target state="new">MSBUILD : error MSB1047: File to print targets to is not valid. {0}</target>
+        <note>{StrBegin="MSBUILD : error MSB1047: "}</note>
+      </trans-unit>
       <trans-unit id="InvalidToolsVersionError">
         <source>MSBUILD : error MSB1040: ToolsVersion is not valid. {0}</source>
         <target state="translated">MSBUILD : error MSB1040: ToolsVersion ist nicht gültig. {0}</target>
