--- a/src/MSBuild/Resources/xlf/Strings.pl.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.pl.xlf
@@ -1015,6 +1015,11 @@ Copyright (C) Microsoft Corporation. Wszelkie prawa zastrzeżone.
       LOCALIZATION: {0} contains the invalid switch text.
     </note>
       </trans-unit>
+      <trans-unit id="InvalidTargetsPath">
+        <source>MSBUILD : error MSB1047: File to print targets to is not valid. {0}</source>
+        <target state="new">MSBUILD : error MSB1047: File to print targets to is not valid. {0}</target>
+        <note>{StrBegin="MSBUILD : error MSB1047: "}</note>
+      </trans-unit>
       <trans-unit id="InvalidToolsVersionError">
         <source>MSBUILD : error MSB1040: ToolsVersion is not valid. {0}</source>
         <target state="translated">MSBUILD : error MSB1040: wartość ToolsVersion jest nieprawidłowa. {0}</target>
