--- a/src/MSBuild/Resources/xlf/Strings.tr.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.tr.xlf
@@ -1006,6 +1006,11 @@ Telif Hakkı (C) Microsoft Corporation. Tüm hakları saklıdır.
       LOCALIZATION: {0} contains the invalid switch text.
     </note>
       </trans-unit>
+      <trans-unit id="InvalidTargetsPath">
+        <source>MSBUILD : error MSB1047: File to print targets to is not valid. {0}</source>
+        <target state="new">MSBUILD : error MSB1047: File to print targets to is not valid. {0}</target>
+        <note>{StrBegin="MSBUILD : error MSB1047: "}</note>
+      </trans-unit>
       <trans-unit id="InvalidToolsVersionError">
         <source>MSBUILD : error MSB1040: ToolsVersion is not valid. {0}</source>
         <target state="translated">MSBUILD : error MSB1040: ToolsVersion geçerli değil. {0}</target>
