--- a/src/Shared/Resources/Strings.shared.resx
+++ b/src/Shared/Resources/Strings.shared.resx
@@ -262,19 +262,19 @@
     <value>Path: {0} exceeds the OS max path limit. The fully qualified file name must be less than {1} characters.</value>
     <comment></comment>
   </data>
-  <data name="Shared.SolutionFilterJsonParsingError" Visibility="Public">
+  <data name="SolutionFilterJsonParsingError" Visibility="Public">
     <value>MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</value>
     <comment>{StrBegin="MSB5025: "}UE: The solution filename is provided separately to loggers.</comment>
   </data>
-  <data name="Shared.SolutionFilterMissingSolutionError" Visibility="Public">
+  <data name="SolutionFilterMissingSolutionError" Visibility="Public">
     <value>MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</value>
     <comment>{StrBegin="MSB5026: "}UE: The solution filename is provided separately to loggers.</comment>
   </data>
-  <data name="Shared.SolutionFilterFilteredProjectDoesNotExist" Visibility="Public">
+  <data name="SolutionFilterFilteredProjectDoesNotExist" Visibility="Public">
     <value>MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</value>
     <comment>{StrBegin="MSB5027: "}UE: The project filename is provided separately to loggers.</comment>
   </data>
-  <data name="Shared.SolutionFilterFilterContainsProjectNotInSolution" Visibility="Public">
+  <data name="SolutionFilterFilterContainsProjectNotInSolution" Visibility="Public">
     <value>MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</value>
     <comment>{StrBegin="MSB5028: "}UE: The project filename is provided separately to loggers.</comment>
   </data>
