--- a/src/Shared/Resources/xlf/Strings.shared.es.xlf
+++ b/src/Shared/Resources/xlf/Strings.shared.es.xlf
@@ -65,22 +65,22 @@
         <target state="translated">La ruta de acceso {0} supera el límite máximo para la ruta de acceso del sistema operativo. El nombre de archivo completo debe ser inferior a {1} caracteres.</target>
         <note />
       </trans-unit>
-      <trans-unit id="Shared.SolutionFilterFilterContainsProjectNotInSolution">
+      <trans-unit id="SolutionFilterFilterContainsProjectNotInSolution">
         <source>MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</source>
         <target state="new">MSB5028: Solution filter file at "{0}" includes project "{1}" that is not in the solution file at "{2}".</target>
         <note>{StrBegin="MSB5028: "}UE: The project filename is provided separately to loggers.</note>
       </trans-unit>
-      <trans-unit id="Shared.SolutionFilterFilteredProjectDoesNotExist">
+      <trans-unit id="SolutionFilterFilteredProjectDoesNotExist">
         <source>MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</source>
         <target state="new">MSB5027: The solution filter file at "{0}" specifies that there is a project file at "{1}" relative to "{2}", but that project file was not found.</target>
         <note>{StrBegin="MSB5027: "}UE: The project filename is provided separately to loggers.</note>
       </trans-unit>
-      <trans-unit id="Shared.SolutionFilterJsonParsingError">
+      <trans-unit id="SolutionFilterJsonParsingError">
         <source>MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</source>
         <target state="new">MSB5025: Json in solution filter file "{0}" is incorrectly formatted.</target>
         <note>{StrBegin="MSB5025: "}UE: The solution filename is provided separately to loggers.</note>
       </trans-unit>
-      <trans-unit id="Shared.SolutionFilterMissingSolutionError">
+      <trans-unit id="SolutionFilterMissingSolutionError">
         <source>MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</source>
         <target state="new">MSB5026: The solution filter file at "{0}" specifies there will be a solution file at "{1}", but that file does not exist.</target>
         <note>{StrBegin="MSB5026: "}UE: The solution filename is provided separately to loggers.</note>
