--- a/src/MSBuild/Resources/Strings.resx
+++ b/src/MSBuild/Resources/Strings.resx
@@ -1171,8 +1171,8 @@ Copyright (C) Microsoft Corporation. All rights reserved.
     <comment>{StrBegin="MSBUILD : error MSB1047: "}</comment>
   </data>
   <data name="InvalidTargetsPath">
-    <value>MSBUILD : error MSB1047: File to print targets to is not valid. {0}</value>
-    <comment>{StrBegin="MSBUILD : error MSB1047: "}</comment>
+    <value>MSBUILD : error MSB1059: Targets could not be printed. {0}</value>
+    <comment>{StrBegin="MSBUILD : error MSB1059: "}</comment>
   </data>
   <!-- MSB1021 and MSB1020 are also used in the engine but their copies do not have the "MSBUILD : " prefix so we must have our own -->
   <data name="LoggerCreationError" UESanitized="true" Visibility="Public">
@@ -1249,7 +1249,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
     <!--
         The command line message bucket is: MSB1001 - MSB1999
 
-        Next error code should be MSB1059.
+        Next error code should be MSB1060.
 
         Don't forget to update this comment after using the new code.
   -->
