--- a/src/MSBuild/Resources/Strings.resx
+++ b/src/MSBuild/Resources/Strings.resx
@@ -787,7 +787,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
       LOCALIZATION: None of the lines should be longer than a standard width console window, eg 80 chars.
     </comment>
   </data>
-  <data name="HelpMessage_37_LowPrioritySwitch" UESanitized="false" Visibility="Public">
+  <data name="HelpMessage_37_LowPrioritySwitch" Visibility="Public">
     <value>  -lowPriority[:True|False]
                      Causes MSBuild to run at low process priority.
 
